--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <main>
@@ -15,11 +18,24 @@
             </div>
             <div id="iformulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente.</p>
-                <form action="#" method="post">
-                    <input type="text" name="usuario" id="iusuario" required min="5" max="12" placeholder="Usuário">
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente.</p>
+                <form action="#" method="post" autocomplete="on">
 
-                    <input type="password" name="senha" id="isenha" required min="8" placeholder="Senha">
+                    <div class="campo">
+                        <span class="material-icons">person</span>
+                        <input type="text" name="usuario" id="iusuario" required maxlength="30" placeholder="seu e-mail" autocomplete="email">
+                        <label for="iusuario">Login</label>
+                    </div>
+
+                    <div class="campo">
+                        <span class="material-icons">vpn_key</span>
+                        <input type="password" name="senha" id="isenha" required minlength="8" maxlength="20" placeholder="sua senha" autocomplete="current-password">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">
+                        Esqueci a senha <span id="imail-icon" class="material-icons">mail</span>
+                    </a>
                 </form>
 
             </div>
